<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.AnimalDetail">

    <ScrollView
        android:id="@+id/animalScrollView"
        android:layout_width="match_parent"
        android:layout_height="750dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/animal_name_colon">
                </TextView>

                <EditText
                    android:id="@+id/editAnimalName"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:hint="@string/animal_name">
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/animal_type_colon">
                </TextView>

                <EditText
                    android:id="@+id/editAnimalType"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:hint="@string/animal_type">
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/animal_lat_colon">
                </TextView>

                <EditText
                    android:id="@+id/editAnimalLat"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:hint="@string/animal_lat">
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/animal_long_colon">
                </TextView>

                <EditText
                    android:id="@+id/editAnimalLong"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:hint="@string/animal_long">
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/animal_notes_colon"
                    android:textSize="25sp">
                </TextView>

                <EditText
                    android:id="@+id/editAnimalNotes"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:hint="@string/animal_notes">
                </EditText>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>